--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@
 button {
   border: 0;
   padding: 0;
-  font-family: inherit;
   background: transparent;
   color: inherit;
   cursor: pointer;
@@ -25,7 +24,6 @@ button {
   height: 64px;
   background: #19191c;
   color: #f9f9f9;
-  font-family: "Poppins";
   box-sizing: border-box;
 }
 
@@ -43,7 +41,7 @@ button {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5);
+  filter: blur(100%);
   visibility: hidden;
   opacity: 0;
   transition: 0.3s;
@@ -89,16 +87,27 @@ body.open .navbar-overlay {
   top: 0;
   left: 0;
   translate: -100% 0;
-  width: 270px;
+  width: 300px;
   height: 100%;
   padding: 20px;
   display: flex;
   gap: 8px;
   flex-direction: column;
   align-items: flex-start;
-  background: #000000;
+  background: #111;
   visibility: hidden;
   transition: translate 0.3s;
+}
+
+.navbar-menu a {
+  font-size: 1rem;
+  font-weight: 700;
+  width: 100%;
+  text-align: left;
+  outline: 0;
+  text-decoration: none;
+  color: #ccc;
+  padding: 1rem;
 }
 
 body.open .navbar-menu {
@@ -115,15 +124,19 @@ body.open .navbar-menu {
     flex-direction: row;
     visibility: visible;
   }
+
+  .navbar-menu a {
+    padding: 0 .1rem;
+  }
 }
 
 .navbar-menu>button {
   color: rgba(255, 255, 255, 0.5);
   background: transparent;
-  padding: 0 8px;
+  padding: 1rem;
 }
 
-.navbar-menu>button.active {
+.navbar-menu>a:hover {
   color: inherit;
 }
 
@@ -137,8 +150,10 @@ body {
   flex-direction: column;
   flex-wrap: wrap;
   background: #222;
-  margin: 13% 20px 0;
+  margin: 15% 20px 0;
   gap: 1rem;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
 }
 
 h1 {
@@ -147,7 +162,6 @@ h1 {
 
 .container {
   flex: 1;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   padding: 1rem;
   border-radius: 1rem;
   background: rgb(63, 94, 251);
@@ -159,13 +173,15 @@ h1 {
   background: linear-gradient(225deg, rgba(34, 193, 195, 1) 0%, rgba(253, 187, 45, 1) 100%);
 }
 
-@media screen and (min-width:700px) {
+@media screen and (min-width:800px) {
   html {
     font-size: 120%;
   }
 
   body {
     flex-direction: row;
+    margin: 9% 20px 0;
+
   }
 
   .container {
@@ -176,5 +192,8 @@ h1 {
 @media screen and (min-width:1024px) {
   html {
     font-size: 100%;
+  }
+  body {
+  margin: 5% 20px 0;
   }
 }
